# graphql-parser

./: .gitignore  CHANGELOG.md  Makefile  README.md  flake.nix  grammar.bnf  graphql-parser.cabal  hie.yaml
.github/workflows/: haskell.yml  nix-build.yaml
ci/: 8.10.7.project  8.8.4.project  9.0.2.project  9.2.2.project
nix/: overlay.nix
src/: GraphQLParser.hs
src/GraphQLParser/: Error.hs  Generator.hs  Grammar.hs  Grammar.info  Grammar.y  IR.hs  Lexer.hs  Lexer.x  Monad.hs  QQ.hs  Span.hs  Syntax.hs  Token.hs
src/GraphQLParser/Syntax/: Name.hs
test/: Benchmarks.hs  Spec.hs
test/data/executableDocument/success/actual/: ex11.txt  ex12.txt  ex13.txt  ex14.txt  ex16.txt  ex19.txt  ex20.txt  ex21.txt  ex23.txt  ex24.txt  ex3.txt  ex30.txt  ex32.txt  ex37.txt  ex39.txt  ex5.txt  ex54.txt  ex56.txt  ex59.txt  ex6.txt  ex68.txt  ex7.txt  ex76.txt  ex9.txt  ex93.txt
test/data/executableDocument/success/examples/: ex39.gql  ex59.gql  ex87.gql
test/data/executableDocument/success/golden/: ex10.txt  ex11.txt  ex14.txt  ex16.txt  ex18.txt  ex20.txt  ex21.txt  ex24.txt  ex3.txt  ex32.txt  ex38.txt  ex44.txt  ex46.txt  ex5.txt  ex50.txt  ex52.txt  ex66.txt  ex68.txt  ex7.txt  ex76.txt  ex8.txt  ex87.txt  ex9.txt  ex93.txt  ex94.txt
test/data/parser/actual/: ex10.txt  ex101.txt  ex11.txt  ex12.txt  ex13.txt  ex14.txt  ex19.txt  ex20.txt  ex21.txt  ex23.txt  ex24.txt  ex31.txt  ex32.txt  ex36.txt  ex37.txt  ex38.txt  ex39.txt  ex42.txt  ex43.txt  ex44.txt  ex46.txt  ex48.txt  ex5.txt  ex50.txt  ex52.txt  ex54.txt  ex58.txt  ex6.txt  ex61.txt  ex64.txt  ex65.txt  ex66.txt  ex68.txt  ex7.txt  ex70.txt  ex76.txt  ex77.txt  ex78.txt  ex79.txt  ex8.txt  (+10 more)
test/data/parser/examples/: ex36.gql  ex42.gql  ex44.gql  ex46.gql  ex77.gql  ex78.gql  ex96.gql
test/data/parser/executableDocument/actual/: ex11.txt  ex14.txt  ex19.txt  ex30.txt  ex6.txt  ex68.txt  ex8.txt  ex87.txt  ex94.txt
test/data/parser/executableDocument/examples/: ex37.gql  ex50.gql
test/data/parser/executableDocument/golden/: ex10.txt  ex16.txt  ex18.txt  ex20.txt  ex21.txt  ex23.txt  ex3.txt  ex37.txt  ex38.txt  ex39.txt  ex5.txt  ex50.txt  ex52.txt  ex54.txt  ex7.txt
test/data/parser/golden/: ex10.txt  ex11.txt  ex14.txt  ex16.txt  ex18.txt  ex19.txt  ex21.txt  ex23.txt  ex24.txt  ex3.txt  ex30.txt  ex32.txt  ex36.txt  ex38.txt  ex39.txt  ex44.txt  ex5.txt  ex50.txt  ex52.txt  ex54.txt  ex56.txt  ex59.txt  ex61.txt  ex64.txt  ex69.txt  ex74.txt  ex77.txt  ex78.txt  ex79.txt  ex8.txt  ex81.txt  ex84.txt  ex87.txt  ex88.txt  ex89.txt  ex9.txt  ex90.txt  ex93.txt  ex94.txt  ex95.txt  (+1 more)
test/data/parser/typeSystemDocument/actual/: ex69.txt  ex74.txt  ex78.txt  ex79.txt  ex88.txt  ex95.txt  ex96.txt
test/data/parser/typeSystemDocument/examples/: ex81.gql  ex95.gql
test/data/parser/typeSystemDocument/golden/: ex36.txt  ex43.txt  ex48.txt  ex61.txt  ex65.txt  ex77.txt  ex80.txt  ex89.txt  ex90.txt
test/data/printer/actual/: ex10.gql  ex101.gql  ex101.txt  ex11.txt  ex12.gql  ex12.txt  ex13.gql  ex14.gql  ex14.txt  ex16.gql  ex16.txt  ex18.txt  ex19.txt  ex20.txt  ex23.txt  ex24.txt  ex3.gql  ex30.gql  ex30.txt  ex31.gql  ex31.txt  ex32.txt  ex36.gql  ex36.txt  ex37.gql  ex38.gql  ex38.txt  ex39.gql  ex39.txt  ex42.txt  ex43.txt  ex44.gql  ex44.txt  ex46.gql  ex46.txt  ex48.gql  ex50.gql  ex50.txt  ex52.gql  ex54.gql  (+48 more)
test/data/printer/examples/: ex10  ex101  ex11  ex12  ex13  ex14  ex16  ex18  ex19  ex20  ex21  ex23  ex24  ex3  ex30  ex31  ex32  ex36  ex37  ex38  ex39  ex42  ex43  ex44  ex46  ex48  ex5  ex50  ex52  ex54  ex56  ex58  ex59  ex6  ex61  ex64  ex65  ex66  ex68  ex69  (+20 more)
test/data/printer/golden/: ex10.gql  ex10.txt  ex101.gql  ex101.txt  ex12.txt  ex14.txt  ex19.txt  ex20.txt  ex21.gql  ex21.txt  ex23.gql  ex23.txt  ex24.txt  ex3.txt  ex30.gql  ex31.gql  ex32.txt  ex36.gql  ex36.txt  ex37.txt  ex39.txt  ex42.gql  ex43.gql  ex44.txt  ex46.gql  ex46.txt  ex48.txt  ex5.txt  ex52.txt  ex54.txt  ex56.gql  ex58.gql  ex58.txt  ex61.txt  ex64.txt  ex65.gql  ex66.txt  ex68.txt  ex69.gql  ex69.txt  (+18 more)
test/data/success/actual/: ex19.txt  ex8.txt  query.txt  queryNested.txt  queryWithAliases.txt  queryWithArgs.txt  queryWithArgs2.txt  queryWithFragment.txt
test/data/success/examples/: query.gql  queryWithAliases.gql  queryWithArgs.gql  queryWithArgs2.gql  queryWithFragment.gql
test/data/success/golden/: ex10.txt  ex18.txt  ex30.txt  query.txt  queryNested.txt  queryWithArgs.txt  queryWithArgs2.txt
test/data/typeSystemDocument/success/actual/: ex36.txt  ex43.txt  ex58.txt  ex61.txt  ex64.txt  ex65.txt  ex74.txt  ex77.txt  ex78.txt  ex80.txt  ex81.txt  ex88.txt  ex90.txt  ex96.txt
test/data/typeSystemDocument/success/examples/: ex43.gql  ex48.gql  ex58.gql  ex69.gql  ex70.gql  ex77.gql  ex80.gql  ex88.gql  ex89.gql  ex90.gql
test/data/typeSystemDocument/success/golden/: ex101.txt  ex36.txt  ex42.txt  ex48.txt  ex61.txt  ex69.txt  ex70.txt  ex79.txt  ex80.txt  ex81.txt  ex84.txt  ex88.txt  ex89.txt  ex95.txt  ex96.txt
