cabal-version:       3.0
name:                graphql-parser
version:             0.0.1
copyright:           2022 Solomon Bothwell, 2022 Hasura Inc
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
license:             Apache-2.0
license-file:        LICENSE
category:            Parser
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==8.10.7

-------------------------------------------------------------------------------

-- Settings shared between all components.
common common-settings
  default-language:    Haskell2010
  default-extensions:
    BlockArguments
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    StrictData
    RecordWildCards
    TupleSections
    DerivingVia
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , base >= 2 && < 5
    , array
    , aeson <1.6 || >=2 && <2.1
    , bytestring
    , containers
    , deepseq
    , hashable
    , mtl
    , text
    , utf8-string
    , optparse-applicative
    , prettyprinter

-------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs: src
  build-depends:
    , lens
    , scientific
    , unordered-containers
    , vector
  --build-tool-depends:
  --  , alex:alex >= 3.2.6
  --  , happy:happy >= 1.20
  exposed-modules:
    GraphQLParser
    GraphQLParser.Grammar
    GraphQLParser.Monad
    GraphQLParser.Span
    GraphQLParser.Token
    GraphQLParser.Lexer
  other-modules:
    Paths_graphql_parser

-------------------------------------------------------------------------------

executable graphql-parser
  import:
    , common-libraries
    , common-settings

  main-is: Main.hs
  build-depends:
    , graphql-parser
