cabal-version:      3.0
name:               graphql-parser
version:            0.0.1
copyright:          2022 Solomon Bothwell, 2022 Hasura Inc
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
license:            Apache-2.0
license-file:       LICENSE
category:           Parser
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.7

-------------------------------------------------------------------------------

-- Settings shared between all components.
common common-settings
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wcpp-undef -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , aeson                 <1.6 || >=2 && <2.1
    , array
    , base                  >=2 && <5
    , bytestring
    , containers
    , deepseq
    , hashable
    , hedgehog
    , mtl
    , optparse-applicative
    , prettyprinter
    , text
    , utf8-string

-------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs:     src
  build-depends:
    , lens
    , scientific
    , template-haskell
    , th-compat
    , unordered-containers
    , vector

  build-tool-depends: alex:alex >=3.2.6, happy:happy >=1.20
  exposed-modules:
    GraphQLParser
    GraphQLParser.Error
    GraphQLParser.Generator
    GraphQLParser.Grammar
    GraphQLParser.Lexer
    GraphQLParser.Monad
    GraphQLParser.QQ
    GraphQLParser.Span
    GraphQLParser.Syntax
    GraphQLParser.Syntax.Name
    GraphQLParser.Token

  other-modules:      Paths_graphql_parser

-------------------------------------------------------------------------------

test-suite graphql-parser-test
  import:
    , common-libraries
    , common-settings

  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , aeson-pretty
    , directory
    , filepath
    , generic-arbitrary
    , graphql-parser
    , hspec
    , hspec-core
    , hspec-golden
    , lens
    , lens-aeson
    , mtl
    , parsec
    , pretty-simple
    , prettyprinter
    , QuickCheck
    , raw-strings-qq
    , safe-exceptions
    , scientific
    , unordered-containers
    , utf8-string
    , vector

-------------------------------------------------------------------------------

benchmark graphql-parser-benchmarks
  import:
    , common-libraries
    , common-settings

  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Benchmarks.hs
  build-depends:
    , aeson-pretty
    , directory
    , filepath
    , generic-arbitrary
    , graphql-parser
    , hspec
    , hspec-core
    , hspec-golden
    , lens
    , lens-aeson
    , mtl
    , parsec
    , pretty-simple
    , prettyprinter
    , QuickCheck
    , raw-strings-qq
    , safe-exceptions
    , scientific
    , tasty-bench
    , text-builder
    , unordered-containers
    , utf8-string
    , vector
